@@ -125,28 +125,40 @@ TEST(WTF_WeakPtr, Forget)
     int dummy2 = 7;
 
     WeakPtrFactory<int> outerFactory(&dummy2);
-    WeakPtr<int> weakPtr1, weakPtr2, weakPtr4;
+    WeakPtr<int> weakPtr1, weakPtr2, weakPtr3, weakPtr4;
     {
         WeakPtrFactory<int> innerFactory(&dummy);
         weakPtr1 = innerFactory.createWeakPtr();
         weakPtr2 = innerFactory.createWeakPtr();
+        weakPtr3 = innerFactory.createWeakPtr();
         EXPECT_EQ(weakPtr1.get(), &dummy);
         EXPECT_EQ(weakPtr2.get(), &dummy);
-        weakPtr1.forget();
-        EXPECT_NULL(weakPtr1.get());
-        EXPECT_EQ(weakPtr2.get(), &dummy);
-        weakPtr1.forget();
-        EXPECT_NULL(weakPtr1.get());
-        EXPECT_EQ(weakPtr2.get(), &dummy);
-        WeakPtr<int> weakPtr3 = weakPtr2;
-        EXPECT_EQ(weakPtr2.get(), &dummy);
         EXPECT_EQ(weakPtr3.get(), &dummy);
-        weakPtr3.forget();
-        EXPECT_NULL(weakPtr3.get());
+        weakPtr1.clear();
+        weakPtr3 = nullptr;
+        EXPECT_NULL(weakPtr1.get());
         EXPECT_EQ(weakPtr2.get(), &dummy);
+        EXPECT_NULL(weakPtr3.get());
+        weakPtr1.clear();
+        weakPtr3.clear();
+        EXPECT_NULL(weakPtr1.get());
+        EXPECT_EQ(weakPtr2.get(), &dummy);
+        EXPECT_NULL(weakPtr3.get());
+        weakPtr3 = nullptr;
+        EXPECT_NULL(weakPtr1.get());
+        EXPECT_EQ(weakPtr2.get(), &dummy);
+        EXPECT_NULL(weakPtr3.get());
+        
         weakPtr4 = weakPtr2;
         EXPECT_EQ(weakPtr2.get(), &dummy);
         EXPECT_EQ(weakPtr4.get(), &dummy);
+
+        WeakPtr<int> weakPtr5 = weakPtr2;
+        EXPECT_EQ(weakPtr2.get(), &dummy);
+        EXPECT_EQ(weakPtr5.get(), &dummy);
+        weakPtr5.clear();
+        EXPECT_NULL(weakPtr5.get());
+        EXPECT_EQ(weakPtr2.get(), &dummy);
 
         weakPtr4 = outerFactory.createWeakPtr();
         EXPECT_EQ(weakPtr2.get(), &dummy);
@@ -160,11 +172,19 @@ TEST(WTF_WeakPtr, Forget)
     WeakPtr<int> weakPtr5 = weakPtr4;
     EXPECT_EQ(weakPtr4.get(), &dummy2);
     EXPECT_EQ(weakPtr5.get(), &dummy2);
-    weakPtr5.forget();
+    weakPtr5.clear();
     EXPECT_NULL(weakPtr5.get());
     WeakPtr<int> weakPtr6 = weakPtr5;
     EXPECT_NULL(weakPtr6.get());
     EXPECT_EQ(weakPtr5.get(), weakPtr6.get());
+
+    WeakPtr<int> weakPtr7 = outerFactory.createWeakPtr();
+    EXPECT_EQ(weakPtr7.get(), &dummy2);
+    weakPtr7 = nullptr;
+    EXPECT_NULL(weakPtr7.get());
+
+    int doNotCopyMe = 152;
+    weakPtr7 = &doNotCopyMe;
 }
     
 } // namespace TestWebKitAPI
